# PythonWorkspace

./: 01_build_env.sh  02_make_workspace.sh  Dockerfile  docker-compose.yml  launch.sh
env/: BaseDockerfile  build_01.sh  build_02.sh  init.sh
workspace/: pyproject.toml
